[package]
name = "unnamed-game"
version = "0.1.0"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["static-link", "use-pkgconfig"] }
